--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -144,7 +144,7 @@
               We may track certain information about you based upon your behaviour on the vrnl.com. We use this information for conducting internal research on our users' demographics, devices, interests, and behaviour to better understand, protect and serve our users. This information is compiled and analysed on an aggregated basis. 
             </p>
             <p class="para_14">
-              <strong>We may also collect Your Information to track user behaviour and preferences for internal analytics and research. We may also use your information:</strong><br>
+              <strong style="font-size: 19px;" class="strongly">We may also collect Your Information to track user behaviour and preferences for internal analytics and research. We may also use your information:</strong><br>
               (i) To evaluate Your interest for investment options, services, offers, subscriptions; <br>
               (ii) To perform analytics and conduct customer research, to determine your interest, for identifying content that generate sales and to analyse traffic patterns.<br>
               </p><ul class="privacy_list_2 clearfix">
