--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -3,7 +3,7 @@
         <nav>
             <div class="hader_row">
                 <div class="nav_col" routerLink="/">
-<img class="images_logo" src="assets/VRNL new.png">
+<img class="images_logo" src="assets/sirplay.logo.png">
                 </div>
                 <div class="nav_col_1">
 <ul class="nav_col_2">
