--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="online-casino_col_2">
-        <img src="assets/online-casino-providers-1.jpg.webp" />
+        <img class="white_casino_1" src="assets/vrnl casino image.webp" />
         <div class="online-casino-youtube">
           <a href="#"><img class="youtube_img" src="assets/play.png.webp" width="520" height="280" /></a>
         </div>
