--- a/src/app/online-casino-software/online-casino-software.component.css
+++ b/src/app/online-casino-software/online-casino-software.component.css
@@ -67,6 +67,12 @@ background-color: #a0c528;
             padding-left: 200px;
             padding-right: 82px;
         }
+
+        .white_casino_1{
+width: 700px;
+height: 700px;
+        }
+
 @media screen and (max-width: 820px){
     .container_imgs{
         width: 100%;
@@ -121,9 +127,9 @@ ol, ul {
     line-height: 30px;
     font-weight: 395;
 }
-.online-casino_col_2 img{
+/* .online-casino_col_2 img{
     height: auto;
-}
+} */
 strong{
     font-weight: bold;
 }
