--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -126,7 +126,7 @@
       </div>
     </div>
 
-    <div class="tools">
+    <!-- <div class="tools">
       <div class="toolhead1">
         <img
           class="tool_sec_img"
@@ -153,7 +153,7 @@
         "
       ></div>
       </div>
-    </div>
+    </div> -->
 
 
 
