--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -366,6 +366,8 @@ cursor: pointer;
     }
     .nav_col img{
       /* margin: 30px -310px !important; */
+      max-width: 17%;
+    margin-left: -121px;
     }
     .navbar-toggler-icon {
      
@@ -417,7 +419,7 @@ cursor: pointer;
   border: none;
 }
 
-@media(max-width: 479px){
+@media(max-width: 800px){
 
 
   .navbar-toggler-icon {
@@ -425,7 +427,9 @@ cursor: pointer;
 }
 
 .nav_col img {
-  margin: 30px -28px !important;
+  /* margin: 30px -28px !important; */
+  max-width: 19%;
+    margin-left: -122px;
 }
 }
 
@@ -433,3 +437,25 @@ cursor: pointer;
   width: 134px;
   height: 53px;
 }
+
+
+
+
+@media(min-width: 1200px){
+
+.nav_col img {
+  /* margin: 30px -28px !important; */
+  max-width: 61%;
+  margin-left: -13px;
+}
+}
+
+@media screen and (max-width:767px) {
+  
+.nav_col img {
+  /* margin: 30px -28px !important; */
+  max-width: 36%;
+  margin-left: -13px;
+}
+}
+
