--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -174,7 +174,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <div class="nav_col" routerLink="/">
-        <img src="assets/sirplay.logo.png" />
+        <img src="assets/VRNL new.png" />
       </div>
       <button
         class="navbar-toggler"
