--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -3207,3 +3207,6 @@ color: #808080;
   padding: 0.458em 0.625em;
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.25);
 }
+.navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
+  display: block !important;
+}
