--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -376,6 +376,7 @@ cursor: pointer;
 
   .nav_col{
     width: 59%;
+    margin: 30px 0 !important;
 
   }
 
@@ -459,3 +460,6 @@ cursor: pointer;
 }
 }
 
+.navbar-toggler:focus{
+  box-shadow: none;
+}
