--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -3210,3 +3210,6 @@ color: #808080;
 .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
   display: block !important;
 }
+.navbar-brand img{
+  width: 34%;
+}
