--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -243,6 +243,10 @@ margin-left: 100px;
 }
 
 
+.navbar-brand img{
+ 
+  margin-left: 19px;
+}
 
 
 .right-img-index3 img {
@@ -3212,5 +3216,5 @@ color: #808080;
 }
 .navbar-brand img{
   width: 34%;
-  margin-left: 19px;
+ 
 }
