--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -2775,3 +2775,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     box-shadow: 0em 0.1em 0.25em 0em hsla(0,0%,0%,0.15);
     color: #fff !important;
 }
+@media screen and (max-width: 820px){
+  h1{
+    margin-left: 13px;
+  }
+  p{
+    margin-left: 13px;
+  }
+}
