--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -3212,7 +3212,7 @@ color: #808080;
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.25);
 }
 .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
-  display: block !important;
+  /* display: block !important; */
 }
 .navbar-brand img{
   width: 34%;
