--- a/src/app/online-casino-software/online-casino-software.component.css
+++ b/src/app/online-casino-software/online-casino-software.component.css
@@ -94,6 +94,10 @@ height: 700px;
     margin-top: 50px !important;
     margin-bottom: 40px !important;
 }
+.white_casino_1{
+    width: 100% !important;
+    height: auto ;
+}
 }
 .containt{
     width: 1233px;
