--- a/src/app/online-sportsbook/online-sportsbook.component.css
+++ b/src/app/online-sportsbook/online-sportsbook.component.css
@@ -124,3 +124,39 @@ b, strong {
 .onther_a{
     font-size: 15px !important;
   }
+
+  @media(max-width:756px){
+    .features_col_1 {
+        width: 345px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .crypto-section5-left {
+      
+        margin-left: 34px;
+    }
+
+    .live_sec5_imgs {
+        width: 95% !important;
+        height: auto !important;
+        margin-left: 34px;
+    }
+    .crypto-section5-right h2 {
+        margin-left: 42px;
+        width: 343px;
+    }
+
+    .crypto-section6-left {
+       
+        margin-left: -5px;
+    }
+  }
+
+  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
+
+  .fearues_row {
+    flex-direction: inherit;
+}
+
+  }
