--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -416,7 +416,7 @@
         <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
       </div> -->
           </div>
-          <div class="accordion-item">
+          <!-- <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingEight">
               <button
                 class="accordion-button collapsed"
@@ -462,7 +462,7 @@
                 Chinese (Simplified)
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
