--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -16,7 +16,7 @@
     <div class="card">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/velkilogo.webp" alt="" style="width: 170px;">
-            <h4 class="logoname " style="    padding-top: 60px;">Skyexch</h4>
+            <h4 class="logoname " style="    padding-top: 60px;">Velki</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
@@ -28,7 +28,7 @@
     <div class="card">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/gullybet.webp" alt="" style="    width: 240px;">
-            <h4 class="logoname" style="    padding-top: 45px;">Skyexch</h4>
+            <h4 class="logoname" style="    padding-top: 45px;">Gullybet</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
@@ -40,7 +40,7 @@
     <div class="card"  style="margin-right: 100px;">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/bb88_logo_w_sponsor.webp "alt="" style="width: 197px;">
-            <h4 class="logoname">Skyexch</h4>
+            <h4 class="logoname">Babu88</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
@@ -51,8 +51,8 @@
     </div>
     <div class="card">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/skylogo.png" alt="">
-            <h4 class="logoname">Skyexch</h4>
+            <img class="lb_partner_logo" src="assets/aura.webp" alt="" style="width: 205px;">
+            <h4 class="logoname">Aura444</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
@@ -63,8 +63,8 @@
     </div>
     <div class="card">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/skylogo.png" alt="">
-            <h4 class="logoname">Skyexch</h4>
+            <img class="lb_partner_logo" src="assets/diamond.png" alt="" style="    width: 191px;">
+            <h4 class="logoname">Diamond</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
@@ -75,8 +75,8 @@
     </div>
     <div class="card">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/skylogo.png" alt="">
-            <h4 class="logoname">Skyexch</h4>
+            <img class="lb_partner_logo" src="assets/lotus.webp" alt="" style="width: 200px;">
+            <h4 class="logoname">Lotus</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
@@ -87,8 +87,8 @@
     </div>
     <div class="card">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/skylogo.png" alt="">
-            <h4 class="logoname">Skyexch</h4>
+            <img class="lb_partner_logo" src="assets/logo-bazi.webp" alt="" style="    width: 200px;">
+            <h4 class="logoname">9bazi</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
@@ -99,8 +99,8 @@
     </div>
     <div class="card">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/skylogo.png" alt="">
-            <h4 class="logoname">Skyexch</h4>
+            <img class="lb_partner_logo" src="assets/world7777.webp" alt="" style="width: 200px;">
+            <h4 class="logoname">World777</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
@@ -111,8 +111,8 @@
     </div>
     <div class="card">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/skylogo.png" alt="">
-            <h4 class="logoname">Skyexch</h4>
+            <img class="lb_partner_logo" src="assets/lcexch.webp" alt="" style="width: 200px;">
+            <h4 class="logoname">Lcexch</h4>
             </div>
         <div class="card-content">
             <h2>Username : vrnldemo</h2>
