--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -63,8 +63,8 @@
           </div>
 
           <div class="email_input">
-            <input type="text" id="country_selector" name="countries" value="" required [(ngModel)]="contact.countries"
-              #countries="ngModel" />
+            <input type="text"  id="country_selector" name="countries" value="" required [(ngModel)]="contact.countries"
+              #countries="ngModel" class="cot">
           </div>
           <div class="email_label" >
             <label for="fname"><b>Phone Number</b></label>
