--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -1139,6 +1139,9 @@ margin-top: 2px !important;
     width: 100%;
     height: auto;
     }
+    .Casino_sec{
+        padding-top: 0px !important;
+    }
   }
 
   .virtual_header{
