--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -95,7 +95,7 @@
       </div>
       <p class="con_param">
         We don’t share your personal information with anyone. Check out our
-        <span class="white_change">“privacy policy”</span> for more information
+        <span class="white_change" routerLink="/privacy-policy">“privacy policy”</span> for more information
       </p>
     </div>
   </div>
