--- a/src/app/demo/demo.component.css
+++ b/src/app/demo/demo.component.css
@@ -6889,7 +6889,7 @@ cursor: pointer;
       margin-top: 12px !important;
     }
     
-    .accordion {
+    /* .accordion {
       --bs-accordion-color: #212529;
       --bs-accordion-bg: #fff;
       --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
@@ -6912,8 +6912,7 @@ cursor: pointer;
       --bs-accordion-body-padding-y: 1rem;
       --bs-accordion-active-color: white;
       --bs-accordion-active-bg: #e7f1ff;
-      /* background-color: white; */
-    }
+    } */
     .accordion-button:focus {
       z-index: 3;
       border-color: var(--bs-accordion-btn-focus-border-color);
