--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -5,10 +5,10 @@
 
 
  
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
 :root{
   --bs-navbar-toggler-icon-bg: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ffffff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e);
-}
+} */
 *{
     padding: 0;
     margin: 0;
@@ -785,7 +785,7 @@ nav{
     box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
   }
   
-  .accordion {
+  /* .accordion {
     --bs-accordion-color: #212529;
     --bs-accordion-bg: #fff;
     --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
@@ -808,7 +808,7 @@ nav{
     --bs-accordion-body-padding-y: 1rem;
     --bs-accordion-active-color: #a4c724 !important;
     --bs-accordion-active-bg: #e7f1ff;
-  }
+  } */
   
   .accordion-body {
     padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
@@ -1338,7 +1338,7 @@ color: gray;
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 
-.accordion {
+/* .accordion {
   --bs-accordion-color: #212529;
   --bs-accordion-bg: #fff;
   --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
@@ -1361,7 +1361,7 @@ color: gray;
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: #a4c724 !important;
   --bs-accordion-active-bg: #e7f1ff;
-}
+} */
 
 .accordion-body {
   padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
