--- a/src/app/lottery-games/lottery-games.component.css
+++ b/src/app/lottery-games/lottery-games.component.css
@@ -784,7 +784,7 @@ nav{
     box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
   }
   
-  .accordion {
+  /* .accordion {
     --bs-accordion-color: #212529;
     --bs-accordion-bg: #fff;
     --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
@@ -808,7 +808,7 @@ nav{
     --bs-accordion-active-color: #a4c724 !important;
     --bs-accordion-active-bg: #e7f1ff;
   }
-  
+   */
   .accordion-body {
     padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
     /* background: red; */
@@ -1329,7 +1329,7 @@ color: gray;
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 
-.accordion {
+/* .accordion {
   --bs-accordion-color: #212529;
   --bs-accordion-bg: #fff;
   --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
@@ -1352,7 +1352,7 @@ color: gray;
   --bs-accordion-body-padding-y: 1em;
   --bs-accordion-active-color: #a4c724 !important;
   --bs-accordion-active-bg: #e7f1ff;
-}
+} */
 
 .accordion-body {
   padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
