--- a/src/app/whitecasino/whitecasino.component.css
+++ b/src/app/whitecasino/whitecasino.component.css
@@ -800,7 +800,7 @@ nav {
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 
-.accordion {
+/* .accordion {
   --bs-accordion-color: #212529;
   --bs-accordion-bg: #fff;
   --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
@@ -823,7 +823,7 @@ nav {
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: #a4c724 !important;
   --bs-accordion-active-bg: #e7f1ff;
-}
+} */
 
 .accordion-body {
   padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
@@ -1366,7 +1366,7 @@ nav {
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 
-.accordion {
+/* .accordion {
   --bs-accordion-color: #212529;
   --bs-accordion-bg: #fff;
   --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
@@ -1389,7 +1389,7 @@ nav {
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: #a4c724 !important;
   --bs-accordion-active-bg: #e7f1ff;
-}
+} */
 
 .accordion-body {
   padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
