--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
     <div class="container">
-    <div class="card">
+    <div class="card"><a href="https://www.skyexch.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/skylogo.png" alt="">
             <h4 class="logoname">Skyexch</h4>
@@ -12,8 +12,9 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card">
+    <div class="card"><a href="https://velki.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/velkilogo.webp" alt="" style="width: 170px;">
             <h4 class="logoname " style="    padding-top: 60px;">Velki</h4>
@@ -24,10 +25,11 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card">
+    <div class="card">  <a href="https://gullybet.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/gullybet.webp" alt="" style="    width: 240px;">
+           <img class="lb_partner_logo" src="assets/gullybet.webp" alt="" style="    width: 240px;">
             <h4 class="logoname" style="    padding-top: 45px;">Gullybet</h4>
             </div>
         <div class="card-content">
@@ -36,8 +38,9 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card"  >
+    <div class="card"  ><a href="https://babu.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/bb88_logo_w_sponsor.webp "alt="" style="width: 197px;">
             <h4 class="logoname">Babu88</h4>
@@ -48,8 +51,9 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card">
+    <div class="card"><a href="https://aura.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/aura.webp" alt="" style="width: 205px;">
             <h4 class="logoname">Aura444</h4>
@@ -60,8 +64,9 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card">
+    <div class="card"><a href="http://www.diamond.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/diamond.png" alt="" style="    width: 191px;">
             <h4 class="logoname">Diamond</h4>
@@ -72,8 +77,9 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card">
+    <div class="card"><a href="https://lotus.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/lotus.webp" alt="" style="width: 200px;">
             <h4 class="logoname">Lotus</h4>
@@ -84,8 +90,9 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card">
+    <div class="card"><a href="https://9bazi.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/logo-bazi.webp" alt="" style="    width: 200px;">
             <h4 class="logoname">9bazi</h4>
@@ -96,8 +103,9 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card">
+    <div class="card"><a href="https://world777.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/world7777.webp" alt="" style="width: 200px;">
             <h4 class="logoname">World777</h4>
@@ -108,8 +116,9 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
-    <div class="card">
+    <div class="card"><a href="https://lcexch.vrnlexch.com/" target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/lcexch.webp" alt="" style="width: 200px;">
             <h4 class="logoname">Lcexch</h4>
@@ -120,6 +129,7 @@
             <h2>Pass - Asdf1234</h2>
 
         </div>
+    </a>
     </div>
 </div>
 <app-footer></app-footer>
