--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,8 @@
 		<img src="assets\24hrcall.png" alt="contact">
 	</button>
 	<div class="side-slider-content">
-		<!-- <div class="contact-service-icon">
-			<img src="/images/web/icon-set/customers-slider/cs-247.png" alt="contact">
-		</div> -->
-		<!-- <div class="contact-service-logo">
-			<img src="/images/web/icon-set/customers-slider/cs_logo.png" alt="logo">
-		</div> -->
-		<ul id="side-cs-cont" class="contact-service-list"><li id="cs-44" class="icon-cs">
+		<ul id="side-cs-cont" class="contact-service-list">
+			<li id="cs-44" class="icon-cs">
 			<a target="_blank">
 				<img src="https://img.c88rx.com/upload/customerservice/image_84.png" ui-key="realIconPath">
 				<span ui-key="displayText">Live Chat 24/7</span>
@@ -20,20 +15,13 @@
 			</a>
 			
 			<hr>
-		</li><li id="cs-46" class="icon-telegram">
-			<!-- <a target="_blank">
-				<img src="https://img.c88rx.com/upload/customerservice/image_85.png" ui-key="realIconPath">
-				<span ui-key="displayText">Telegram Support</span>
-				
-			</a> -->
+		</li>
+		<li id="cs-46" class="icon-telegram">
+			
 			
 			<hr>
 		</li><li id="cs-143" class="icon-telegram">
-			<!-- <a target="_blank">
-				<img src="https://img.c88rx.com/upload/customerservice/image_361.png" ui-key="realIconPath">
-				<span ui-key="displayText">Telegram Channel</span>
-				
-			</a> -->
+			
 			
 			<hr>
 		</li><li id="cs-145" class="icon-fb">
@@ -53,7 +41,7 @@
 			
 			<hr>
 		</li><li id="cs-81" class="icon-mail">
-			<a target="_blank" href="mailto:marketing@crickex.com">
+			<a target="_blank" href="https://t.me/Johnmark1974">
 				<img src="assets\icons8-twitter-circled.gif" ui-key="realIconPath">
 				<span ui-key="displayText">Twitter</span>
 				
@@ -65,6 +53,15 @@
 			<a target="_blank" href="skype:live:9960f32f776599a2?chat">
 				<img src="assets\icons8-skype.gif" ui-key="realIconPath">
 				<span ui-key="displayText">skype</span>
+				
+			</a>
+			
+			<hr>
+		</li>
+		<li id="cs-81" class="icon-mail">
+			<a target="_blank" href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0">
+				<img src="assets/whatsapp-gif.gif" ui-key="realIconPath">
+				<span ui-key="displayText">whatsapp</span>
 				
 			</a>
 			
