--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <nav>
       <div class="nav_row">
         <div class="nav_col">
-          <a ><img class="vrnl_logo" src="assets/VRNL new.png" /></a>
+          <a ><img class="vrnl_logo" src="assets/VRNL new.png"  routerLink="/"/></a>
         </div>
         <div class="nav_col_2">
           <div class="nav_row_2">
@@ -161,9 +161,10 @@
         <div class="nav_col_3">
           <a target="_blank" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d" style="color: black;" ><i class="fa-brands fa-facebook-f"></i></a>
          
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-youtube"></i>
-          <i class="fa-brands fa-linkedin"></i>
+          <a target="_blank" href="https://t.me/Johnmark1974" style="color: black;" ><i class="fa-brands fa-twitter"></i></a>
+          <!-- <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-linkedin"></i> -->
+          <a target="_blank" href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0" style="color: black;" ><i class="fa-brands fa-whatsapp"></i></a>
           <a target="_blank" href="skype:live:9960f32f776599a2?chat" style="color: black;"> <i class="fa-brands fa-skype"></i></a>
           <a target="_blank" href="https://www.instagram.com/vrnl_exchange" style="color: black;"> <i class="fa-brands fa-instagram"></i></a>
          
